feat: Implement opening the server in a terminal window
The server can now open in a terminal window when restarted.